<resources>
    <string name="app_name">CompraFacil</string>
    <string name="activity_modo_usuario">Modo de Usuario</string>
    <string name="activity_validar_administrador">Validación usuario</string>
    <string name="Bebidas">Bebidas</string>
    <string name="Postres">Postres</string>
    <string name="Dulces">Dulces</string>
    <string name="Galletas">Galletas</string>
    <string name="Botanas">Botanas</string>
    <string name="Snacks">Snacks</string>
    <string name="Bienvenido">Bienvenido a Buy Yourself</string>
    <string name="Compra">Mi compra</string>
    <string name="Producto">Producto</string>
    <string name="Cantidad">Cantidad</string>
    <string name="Total">Total</string>
    <string name="Confirmar">Confirmar Compra</string>
    <string name="Cancelar">Cancelar Compra</string>
    <string name="button_Gestionar_Empleados">Gestionar empleados</string>
    <string name="button_Consultar_Inventario">Consultar inventario</string>
    <string name="button_Modificar_Inventario">Modificar inventario</string>
    <string name="button_Cerrar_Sesion">Cerrar sesión</string>
    <string name="button_Actualizar_Inventario">Actualizar inventario</string>
    <string name="button_Restablecer_Inventario">Restablecer inventario</string>
    <string name="button_Categoria_Botanas">Botanas</string>
    <string name="button_Categoria_Dulces">Dulces</string>
    <string name="button_Categoria_Postres">Postres</string>
    <string name="button_Categoria_Bebidas">Bebidas</string>
    <string name="button_Categoria_Galletas">Galletas</string>
    <string name="button_Categoria_Sabritas">Sabritas</string>
    <string name="CantidadDis">CandidadDis</string>
    <string name="CandidadDis">Cantidad Disponible</string>
    <string name="Precio">Precio</string>
    <string name="Categoria">Categoria</string>
    <string name="Comprar">Comprar</string>
    <string name="textView_Agregar_Nuevo_Producto">Agregar nuevos productos</string>
    <string name="textView_Titulo_Carrito_Compras">Carrito de compras</string>
    <string name="textView_Titulo_Usuario_Activity">Bienvenido a iSnacks</string>
    <string name="editText_Nombre_Producto">Nombre...</string>
    <string name="editText_Categoria_Producto">Categoria...</string>
    <string name="editText_Precio_Producto">Precio...</string>
    <string name="editText_Cantidad_Producto">Cantidad...</string>
    <string name="columa_nombre">NOMBRE</string>
    <string name="columa_categoria">CATEGORIA</string>
    <string name="columa_cantidad">CANTIDAD</string>
    <string name="columa_precio">PRECIO</string>
    <string name="Productos">Productos</string>
    <string name="Precios">Precio</string>
    <string name="CantDis">Cantidad Disponible</string>
    <string name="editText_Nombre_empleado">Nombre...</string>
    <string name="editText_Puesto_empleado">Puesto...</string>
    <string name="editText_Usuario_empleado">Usuario...</string>
    <string name="editText_Contraseña_empleado">Contraseña...</string>
    <string name="button_Actualizar_empleado">Actualizar empleados</string>
    <string name="button_Restablecer_empleado">Restablecer empleados</string>
    <string name="button_Agregar_empleado">Agregar</string>
    <string name="button_eliminarProducto">Eliminar</string>
    <string name="textView_Agregar_Nuevo_Empleado">Agregar nuevo empleado</string>
    <string name="columna_Nombre_empleado">Nombre</string>
    <string name="columna_puesto_empleado">Puesto</string>
    <string name="columna_Usuario_empleado">Usuario</string>
    <string name="columna_Contraseña_empleado">Contraseña</string>

</resources>
