<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GestionarInventario">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="1009dp"
            android:layout_height="580dp"
            android:layout_gravity="left|top"
            android:onClick="actualizarEmpleados">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="#787880"
                    android:orientation="horizontal"
                    android:alpha=".75">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="30sp"
                        android:singleLine="true"
                        android:id="@+id/tv_nombre_columna_nombre_empleados"
                        android:textColor="#ffffff"
                        android:text="@string/columna_Nombre_empleado"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_gravity="left"
                    android:background="#acabab"
                    android:orientation="horizontal"
                    android:alpha=".75">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/columna_puesto_empleado"
                        android:textSize="30sp"
                        android:singleLine="true"
                        android:id="@+id/tv_puesto_empleado"
                        android:textColor="#ffffff"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_gravity="left"
                    android:background="#787880"
                    android:orientation="horizontal"
                    android:alpha=".75">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/columna_Usuario_empleado"
                        android:textSize="30sp"
                        android:singleLine="true"
                        android:id="@+id/tv_usuario_empleado"
                        android:textColor="#ffffff"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_gravity="left"
                    android:background="#acabab"
                    android:orientation="horizontal"
                    android:alpha=".75">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/columna_Contraseña_empleado"
                        android:textSize="30sp"
                        android:singleLine="true"
                        android:id="@+id/et_contraseña_empleado"
                        android:textColor="#ffffff"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <ListView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lv_elementos_gestionar_empleados"
                android:layout_below="@+id/linearLayout4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="1039dp"
            android:layout_height="153dp"
            android:layout_gravity="left|bottom"
            android:background="#1b1b1b">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_Actualizar_Empleado"
                android:layout_marginLeft="95dp"
                android:layout_marginStart="95dp"
                android:text="@string/button_Actualizar_empleado"
                android:background="#ff0000"
                android:textColor="#ffffff"
                android:alpha=".7"
                android:textSize="20sp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="actualizarEmpleados" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_Restablecer_Empleado"
                android:text="@string/button_Restablecer_empleado"
                android:background="#ff0000"
                android:textColor="#ffffff"
                android:alpha=".7"
                android:textSize="20sp"
                android:layout_marginRight="118dp"
                android:layout_marginEnd="118dp"
                android:layout_alignTop="@+id/button_Actualizar_Empleado"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:onClick="restablecerEmpleados" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="259dp"
            android:layout_height="match_parent"
            android:layout_gravity="right|center_vertical"
            android:background="#898989">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_Agregar_Nuevo_Empleado"
                android:gravity="center"
                android:textColor="#ffffff"
                android:background="#000000"
                android:textSize="25sp"
                android:id="@+id/textView_NuevoEmpleado"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:id="@+id/editText_NombreEmpleado"
                android:hint="@string/editText_Nombre_empleado"
                android:textSize="25sp"
                android:background="#ffffff"
                android:alpha=".8"
                android:gravity="center"
                android:layout_below="@+id/textView_NuevoEmpleado"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:id="@+id/editText_usuario_empleado"
                android:hint="@string/editText_Usuario_empleado"
                android:textSize="25sp"
                android:background="#ffffff"
                android:alpha=".8"
                android:gravity="center"
                android:layout_below="@+id/spinnerPuestoEmpleado"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:id="@+id/editText_contraseña_empleado"
                android:hint="@string/editText_Contraseña_empleado"
                android:textSize="25sp"
                android:background="#ffffff"
                android:alpha=".8"
                android:gravity="center"
                android:layout_below="@+id/editText_usuario_empleado"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:layout_below="@id/editText_contraseña_empleado"
                android:text="@string/button_Agregar_empleado"
                android:id="@+id/button_AgregarNuevoEmpleado"
                android:textColor="#ffffff"
                android:background="#ff0000"
                android:alpha=".8"
                android:textSize="20sp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:onClick="agregarNuevoEmpleado" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerPuestoEmpleado"
                android:layout_marginTop="30dp"
                android:hint="@string/editText_Puesto_empleado"
                android:textSize="25sp"
                android:background="#ffffff"
                android:alpha=".8"
                android:gravity="center"
                android:layout_below="@+id/editText_NombreEmpleado"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                />
        </RelativeLayout>
    </FrameLayout>
</RelativeLayout>