<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="comprafacil.myapp.root.comprafacil.Categoria">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#30d0a2"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="400dp"
            android:layout_height="70dp"
            android:text="@string/Categoria"
            android:id="@+id/textView2"
            android:gravity="center|center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="#070707"
            android:textSize="55sp"
            android:background="#e0d080" />

        <RelativeLayout
            android:layout_width="900dp"
            android:layout_height="match_parent"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="88dp"
            android:id="@+id/relativeLayout"
            android:clickable="false"
            android:background="#84e340">

            <TextView
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:text="@string/Productos"
                android:id="@+id/textView14"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="63dp"
                android:layout_marginStart="63dp"
                android:textSize="40sp"
                android:textColor="#0b0b0b"
                android:gravity="center" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:text="@string/Precios"
                android:id="@+id/textView15"
                android:textSize="40sp"
                android:textColor="#0b0b0b"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="70dp"
                android:text="@string/CantDis"
                android:id="@+id/textView16"
                android:textSize="27sp"
                android:textColor="#0b0b0b"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/textView15" />

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listView"
                android:layout_below="@+id/textView14"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Comprar"
            android:id="@+id/button5"
            android:textSize="30sp"
            android:layout_marginBottom="245dp"
            android:layout_alignBottom="@+id/relativeLayout"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="53dp"
            android:layout_marginEnd="53dp" />

    </RelativeLayout>
</RelativeLayout>
