<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"


        android:id="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#787880"
            android:orientation="horizontal"
            android:alpha=".75">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="40sp"
                android:singleLine="true"
                android:id="@+id/tv_nombre_columna_nombre"
                android:textColor="#ffffff"
                android:text="@string/columa_nombre"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="left"
            android:background="#acabab"
            android:orientation="horizontal"
            android:alpha=".75">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/columa_categoria"
                android:textSize="40sp"
                android:singleLine="true"
                android:id="@+id/tv_nombre_columna_categoria"
                android:textColor="#ffffff"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="left"
            android:background="#787880"
            android:orientation="horizontal"
            android:alpha=".75">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/columa_cantidad"
                android:textSize="40sp"
                android:singleLine="true"
                android:id="@+id/tv_nombre_columna_cantidad"
                android:textColor="#ffffff"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="left"
            android:background="#acabab"
            android:orientation="horizontal"
            android:alpha=".75">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/columa_precio"
                android:textSize="40sp"
                android:singleLine="true"
                android:id="@+id/tv_nombre_columna_precio"
                android:textColor="#ffffff"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lv_elementos_inventario"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>