<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comprafacil.myapp.root.comprafacil.AdministradorActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="1031dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|top">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal">

                <ListView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/listView_Pedidos" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="246dp"
            android:layout_height="match_parent"
            android:layout_gravity="right|top">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#000000">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:alpha="0.8"
                    android:id="@+id/button_Gestionar_Empleados"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="30dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/button_Gestionar_Empleados" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_Consultar_Inventario"
                    android:textSize="20sp"
                    android:alpha="0.8"
                    android:layout_marginBottom="30dp"
                    android:id="@+id/button_Consultar_Inventario"
                    android:layout_below="@+id/button_Gestionar_Empleados"
                    android:onClick="abrirConsultarInventario" />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_Modificar_Inventario"
                    android:textSize="20sp"
                    android:alpha="0.8"
                    android:id="@+id/button_Modificar_Inventario"
                    android:layout_below="@+id/button_Consultar_Inventario"
                    android:onClick="abrirModificarInventario" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Nombre del usuario"
                    android:id="@+id/textView_Nombre_Usuario"
                    android:layout_below="@+id/button_Modificar_Inventario"
                    android:textSize="20sp"
                    android:layout_marginTop="220dp"
                    android:gravity="center"
                    android:textColor="#d42121" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Puesto del usuario"
                    android:id="@+id/textView_Puesto_Usuario"
                    android:layout_below="@+id/textView_Nombre_Usuario"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:textColor="#d42121" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_Cerrar_Sesion"
                    android:textSize="20sp"
                    android:alpha=".8"
                    android:layout_marginTop="80dp"
                    android:layout_below="@+id/textView_Puesto_Usuario"
                    android:gravity="center"
                    android:nestedScrollingEnabled="false"
                    android:onClick="cerrarSesion" />
            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>
</RelativeLayout>
